updated yml name value

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,4 +12,7 @@ jobs:
         with:
           node-version: 16
       - uses: './'
+      - uses: './'
+        with:
+          person: 'Batman'
         
