--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,10 @@
 name: 'Dwights demp action'
 description: 'Greet someone and record the time'
+inputs:
+  person:
+    description: 'The person to greet'
+    required: true
+    default: 'User'
 runs:
   using: 'node16'
   main: 'src/index.js'
