--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,19 +6,25 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 16
-      - uses: './'
-      - uses: './'
-        with:
-          person: 'Batman'
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
+
       - name: Install dependencies
-        run: npm install
-        
+        run: npm ci
+
+      - name: Run custom action for Bruce
+        uses: './'
+        with:
+          person: 'Bruce'
+
+      - name: Run custom action for Batman
+        uses: './'
+        with:
+          person: 'Batman'
