--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,7 +17,10 @@ jobs:
           node-version: '18'
 
       - name: Install dependencies
-        run: npm ci
+        run: npm install
+
+      - name: Run npm audit to check vulnerabilities
+        run: npm audit --audit-level=moderate
 
       - name: Run custom action for Bruce
         uses: './'
