--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,35 +11,59 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Log after checkout
+        run: echo "✅ Checkout code completed"
+
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
+      - name: Log after Node.js setup
+        run: echo "✅ Node.js setup completed"
+
       - name: Install dependencies
         run: npm install
+
+      - name: Log after installing dependencies
+        run: echo "✅ npm install completed"
 
       - name: Run npm audit to check vulnerabilities
         run: npm audit --audit-level=moderate
 
-      - name: "Build Docker image"
+      - name: Log after npm audit
+        run: echo "✅ npm audit completed"
+
+      - name: Build Docker image
         run: docker build -t my-app:${{ github.sha }} .
-        
-      - name: Scan Docker image with Trivy
-        uses: aquasecurity/trivy-action@v0.6.0
-        with:
-          image-ref: my-app:${{ github.sha }}
-          severity: HIGH,CRITICAL
-          exit-code: 1
-          format: table
-          ignore-unfixed: true
+
+      # - name: Log after Docker image build
+      #   run: echo "✅ Docker image build completed"
+
+      # - name: Scan Docker image with Trivy
+      #   uses: aquasecurity/trivy-action@v0.6.0
+      #   with:
+      #     image-ref: my-app:${{ github.sha }}
+      #     severity: HIGH,CRITICAL
+      #     exit-code: 1
+      #     format: table
+      #     ignore-unfixed: true
+
+      # - name: Log after Trivy scan
+      #   run: echo "✅ Trivy scan completed"
 
       - name: Run custom action for Bruce
         uses: './'
         with:
           person: 'Bruce'
 
+      - name: Log after custom action Bruce
+        run: echo "✅ Custom action for Bruce completed"
+
       - name: Run custom action for Batman
         uses: './'
         with:
           person: 'Batman'
+
+      - name: Log after custom action Batman
+        run: echo "✅ Custom action for Batman completed"
