--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -69,3 +69,8 @@ jobs:
 
       - name: Log after custom action Batman
         run: echo "✅ Custom action for Batman completed"
+
+      - name: ZAP Scan
+        uses: zaproxy/action-full-scan@v0.12.0
+        with:
+          target: 'https://www.zaproxy.org/'
