--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -102,6 +102,7 @@ jobs:
         with:
           target: 'http://localhost:3000'
           # rules_file_name: '.zap/rules.tsv'
+          fail-action: false
           cmd_options: '-a'
 
       - name: Log after ZAP scan
